# goit-web-hw-14

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5a6a2843c158_initial_migration.py  5ad4da56701a_add_avatar_and_verified_field_to_user.py  891c79e22a29_change_date_of_birth_column_to_date.py  c5f91d24fef3_users.py
app/conf/: config.py
app/database/: db.py  redis.py
app/models/: models.py
app/repository/: contacts.py  users.py  users.test.py
app/routes/: auth.py  contacts.py  user_profile.py
app/schemas/: contact.py  user.py
app/services/: auth.py  cloudinary.py  email.py  roles.py
app/services/templates/: otp.html
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
tests/: conftest.py  test_database.py  test_main.py  test_repository.py  test_routers.py  test_services.py
